fix: overlapping bars

--- a/src/components/Modals/BusinessHoursModal/BusinessHoursModal.scss
+++ b/src/components/Modals/BusinessHoursModal/BusinessHoursModal.scss
@@ -12,7 +12,7 @@
         flex-direction: column;
         top: 0;
         left: 0;
-        z-index: 1;
+        z-index: 3;
         max-width: 100%;
         height: calc(100% - 7.5rem);
 
